tests/cancel/cancel_3.stderr
error[E0382]: use of partially moved value: `s`
  --> $DIR/cancel_3.rs:90:40
   |
88 |     cancel(s.session1);
   |            ---------- value partially moved here
89 |
90 |     let s = send_mpst_a_to_b(random(), s);
   |                                        ^ value used here after partial move
   |
   = note: partial move occurs because `s.session1` has type `mpstthree::binary::Send<i32, mpstthree::binary::End>`, which does not implement the `Copy` trait

error[E0382]: use of partially moved value: `s`
  --> $DIR/cancel_3.rs:97:35
   |
95 |     cancel(s.session1);
   |            ---------- value partially moved here
96 |
97 |     let (_, s) = recv_mpst_b_to_a(s)?;
   |                                   ^ value used here after partial move
   |
   = note: partial move occurs because `s.session1` has type `Recv<i32, mpstthree::binary::End>`, which does not implement the `Copy` trait
